templates/bc-apis_template.yaml
---
# Source: bc-apis/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name
  namespace: default
spec:
  ports:
  - name: http
    port: 8024
    protocol: TCP
    targetPort: 8024
  - name: ws
    port: 8025
    protocol: TCP
    targetPort: 8025
  selector:
    app: bc-apis
  sessionAffinity: None
  type: ClusterIP
---
# Source: bc-apis/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bc-apis
  name: release-name
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: bc-apis
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bc-apis
    spec:
      containers:
      - env:
        - name: DEFAULT_INGRESS_CLASS
          value: portal-ingress
        - name: DEFAULT_STORAGE_CLASS
          value: standard
        - name: K8S_OIDC_PROXY_URL
          value: <replace-with-k8s-oidc-proxy-url>
        - name: OIDC_SERVER_URL
          value: <replace-with-oidc-server-url>
        - name: OIDC_SERVER_CLIENT_ID
          value: <replace-with-oidc-client-id>
        - name: OIDC_SERVER_CLIENT_SECRET
          value: <replace-with-oidc-client-secret>
        - name: K8S_API_TIMEOUT
          value: "10"
        - name: IMAGE_NAMESPACE
          value: hyperledgerk8s
        - name: IMAGE_FABRIC_CA_TAG
          value: iam-20230131
        - name: IAM_PROVIDER_URL
          value: <replaced-iam-server>
        - name: IMAGE_FABRIC_ORDERER_TAG
          value: 2.4.7
        - name: IMAGE_FABRIC_PEER_TAG
          value: 2.4.7-external
        - name: LOG_LEVELS
          value: log,error,warn
        - name: OPERATOR_INGRESS_DOMAIN
          value: <replaced-ingress-nginx-ip>.nip.io
        - name: MINIO_ACCESS_KEY
          value: ylc9dZGbZg2oYgnE
        - name: MINIO_SECRET_KEY
          value: ykCAHG3snLaToaRsbPo3rhCyZNqCKcIt
        - name: MINIO_ENDPOINT
          value: fabric-minio.baas-system.svc.cluster.local
        image: hyperledgerk8s/bc-apis:20230703.143401.87
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /health
            port: 8024
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: bc-apis
        ports:
        - containerPort: 8024
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /health
            port: 8024
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/localtime
          name: time-localtime
          readOnly: true
      dnsPolicy: ClusterFirst
      hostAliases:
      
        - hostnames:
          - oidc.<replaced-ingress-nginx-ip>.nip.io
          ip: <replaced-ingress-nginx-ip>
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /etc/localtime
          type: ""
        name: time-localtime
---
# Source: bc-apis/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    description: bc-apis-ingress
    displayName: bc-apis-ingress
    httpSend: /
    ingress-lb: portal-ingress
    kubernetes.io/ingress.class: portal-ingress
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_cache static-cache;
      proxy_cache_valid 404 10m;
      proxy_cache_use_stale error timeout updating http_404 http_500 http_502 http_503 http_504;
      proxy_cache_bypass $http_x_purge;
      add_header X-Cache-Status $upstream_cache_status; # check X-Cache-Status to see if it's HIT
      rewrite ^/bc-apis(/|$)(.*)$ /$2 break;
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "false"
    nginx.ingress.kubernetes.io/load-balance: round_robin
    nginx.ingress.kubernetes.io/proxy-body-size: ""
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/server-alias: ""
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: $host
  labels:
    ingress-lb: portal-ingress
  name: release-name-ingress
  namespace: default
spec:
  rules:
  - host: portal.<replaced-ingress-nginx-ip>.nip.io
    http:
      paths:
      - backend:
          service:
            name: release-name
            port:
              number: 8024
        path: /bc-public
        pathType: ImplementationSpecific
      - backend:
          service:
            name: release-name
            port:
              number: 8024
        path: /bc-apis
        pathType: ImplementationSpecific
      - backend:
          service:
            name: release-name
            port:
              number: 8025
        path: /bc-ws
        pathType: ImplementationSpecific
